--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "winstrap",
+  "name": "@hezedu/winstrap",
   "description": "Winstrap is the official Bootstrap theme for Microsoft design language.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/winjs/winstrap.git"
   },
-  "version": "0.5.12",
+  "files": [
+    "dist/css/winstrap.min.css",
+    "dist/js/vendor/bootstrap.min.js",
+    "dist/fonts"
+  ],
+  "version": "0.5.14",
   "author": "Microsoft",
   "contributors": [
     "Frederic Perrin",
@@ -19,8 +24,6 @@
   ],
   "homepage": "http://winstrap.azurewebsites.net",
   "dependencies": {
-    "bootstrap-sass": "3.3.7",
-    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
@@ -35,12 +38,14 @@
     "grunt-file-exists": "^0.1.4",
     "grunt-notify": "^0.4.5",
     "grunt-sass": "^2.0.0",
-    "jshint-stylish": "^2.2.1"
+    "jshint-stylish": "^2.2.1",
+    "bootstrap-sass": "3.3.7",
+    "jquery": "^3.1.1"
   },
   "bugs": {
     "url": "https://github.com/winjs/winstrap/issues"
   },
-  "main": "dist/*",
+  "main": "index.js",
   "keywords": [
     "microsoft",
     "windows",
